backend2/AnalyzerC3D/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORDER
    CORIZQ
    PRCHAR
    PRFLOAT
    PRINTEGER
    RCANT
    RCLOSEA
    RFLOAT
    RFMT
    RFUNC
    RHEAP
    RIMPORT
    RMAIN
    ROPENA
    RPACKAGE
    RPRINTF
    RSTACK
    RVAR

Grammar

Rule 0     S' -> initial
Rule 1     initial -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instruction -> assignment
Rule 5     instruction -> gotoSt
Rule 6     instruction -> labelSt
Rule 7     instruction -> ifSt
Rule 8     ifSt -> RIF exp LLAIZQ gotoSt LLADER
Rule 9     assignment -> ID IGUAL exp PTCOMA
Rule 10    gotoSt -> RGOTO ID PTCOMA
Rule 11    labelSt -> ID DOSPT
Rule 12    exp -> exp MAS exp
Rule 13    exp -> exp MENOS exp
Rule 14    exp -> exp MULTIPLICACION exp
Rule 15    exp -> exp DIVISION exp
Rule 16    exp -> RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
Rule 17    exp -> MENOS exp
Rule 18    exp -> exp IGUALIGUAL exp
Rule 19    exp -> exp DISTINTO exp
Rule 20    exp -> exp MAYOR exp
Rule 21    exp -> exp MENOR exp
Rule 22    exp -> exp MAYORIGUAL exp
Rule 23    exp -> exp MENORIGUAL exp
Rule 24    exp -> ID
Rule 25    exp -> ENTERO
Rule 26    exp -> DECIMAL

Terminals, with rules where they appear

COMA                 : 16
CORDER               : 
CORIZQ               : 
DECIMAL              : 26
DISTINTO             : 19
DIVISION             : 15
DOSPT                : 11
ENTERO               : 25
ID                   : 9 10 11 24
IGUAL                : 9
IGUALIGUAL           : 18
LLADER               : 8
LLAIZQ               : 8
MAS                  : 12
MAYOR                : 20
MAYORIGUAL           : 22
MENOR                : 21
MENORIGUAL           : 23
MENOS                : 13 17
MULTIPLICACION       : 14
PARDER               : 16
PARIZQ               : 16
PRCHAR               : 
PRFLOAT              : 
PRINTEGER            : 
PTCOMA               : 9 10
PUNTO                : 16
RCANT                : 
RCLOSEA              : 
RFLOAT               : 
RFMT                 : 
RFUNC                : 
RGOTO                : 10
RHEAP                : 
RIF                  : 8
RIMPORT              : 
RMAIN                : 
RMATH                : 16
RMOD                 : 16
ROPENA               : 
RPACKAGE             : 
RPRINTF              : 
RSTACK               : 
RVAR                 : 
error                : 

Nonterminals, with rules where they appear

assignment           : 4
exp                  : 8 9 12 12 13 13 14 14 15 15 16 16 17 18 18 19 19 20 20 21 21 22 22 23 23
gotoSt               : 5 8
ifSt                 : 7
initial              : 0
instruction          : 2 3
instructions         : 1 2
labelSt              : 6

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (4) instruction -> . assignment
    (5) instruction -> . gotoSt
    (6) instruction -> . labelSt
    (7) instruction -> . ifSt
    (9) assignment -> . ID IGUAL exp PTCOMA
    (10) gotoSt -> . RGOTO ID PTCOMA
    (11) labelSt -> . ID DOSPT
    (8) ifSt -> . RIF exp LLAIZQ gotoSt LLADER

    ID              shift and go to state 8
    RGOTO           shift and go to state 9
    RIF             shift and go to state 10

    initial                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4
    gotoSt                         shift and go to state 5
    labelSt                        shift and go to state 6
    ifSt                           shift and go to state 7

state 1

    (0) S' -> initial .



state 2

    (1) initial -> instructions .
    (2) instructions -> instructions . instruction
    (4) instruction -> . assignment
    (5) instruction -> . gotoSt
    (6) instruction -> . labelSt
    (7) instruction -> . ifSt
    (9) assignment -> . ID IGUAL exp PTCOMA
    (10) gotoSt -> . RGOTO ID PTCOMA
    (11) labelSt -> . ID DOSPT
    (8) ifSt -> . RIF exp LLAIZQ gotoSt LLADER

    $end            reduce using rule 1 (initial -> instructions .)
    ID              shift and go to state 8
    RGOTO           shift and go to state 9
    RIF             shift and go to state 10

    instruction                    shift and go to state 11
    assignment                     shift and go to state 4
    gotoSt                         shift and go to state 5
    labelSt                        shift and go to state 6
    ifSt                           shift and go to state 7

state 3

    (3) instructions -> instruction .

    ID              reduce using rule 3 (instructions -> instruction .)
    RGOTO           reduce using rule 3 (instructions -> instruction .)
    RIF             reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)


state 4

    (4) instruction -> assignment .

    ID              reduce using rule 4 (instruction -> assignment .)
    RGOTO           reduce using rule 4 (instruction -> assignment .)
    RIF             reduce using rule 4 (instruction -> assignment .)
    $end            reduce using rule 4 (instruction -> assignment .)


state 5

    (5) instruction -> gotoSt .

    ID              reduce using rule 5 (instruction -> gotoSt .)
    RGOTO           reduce using rule 5 (instruction -> gotoSt .)
    RIF             reduce using rule 5 (instruction -> gotoSt .)
    $end            reduce using rule 5 (instruction -> gotoSt .)


state 6

    (6) instruction -> labelSt .

    ID              reduce using rule 6 (instruction -> labelSt .)
    RGOTO           reduce using rule 6 (instruction -> labelSt .)
    RIF             reduce using rule 6 (instruction -> labelSt .)
    $end            reduce using rule 6 (instruction -> labelSt .)


state 7

    (7) instruction -> ifSt .

    ID              reduce using rule 7 (instruction -> ifSt .)
    RGOTO           reduce using rule 7 (instruction -> ifSt .)
    RIF             reduce using rule 7 (instruction -> ifSt .)
    $end            reduce using rule 7 (instruction -> ifSt .)


state 8

    (9) assignment -> ID . IGUAL exp PTCOMA
    (11) labelSt -> ID . DOSPT

    IGUAL           shift and go to state 12
    DOSPT           shift and go to state 13


state 9

    (10) gotoSt -> RGOTO . ID PTCOMA

    ID              shift and go to state 14


state 10

    (8) ifSt -> RIF . exp LLAIZQ gotoSt LLADER
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 15

state 11

    (2) instructions -> instructions instruction .

    ID              reduce using rule 2 (instructions -> instructions instruction .)
    RGOTO           reduce using rule 2 (instructions -> instructions instruction .)
    RIF             reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)


state 12

    (9) assignment -> ID IGUAL . exp PTCOMA
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 21

state 13

    (11) labelSt -> ID DOSPT .

    ID              reduce using rule 11 (labelSt -> ID DOSPT .)
    RGOTO           reduce using rule 11 (labelSt -> ID DOSPT .)
    RIF             reduce using rule 11 (labelSt -> ID DOSPT .)
    $end            reduce using rule 11 (labelSt -> ID DOSPT .)


state 14

    (10) gotoSt -> RGOTO ID . PTCOMA

    PTCOMA          shift and go to state 22


state 15

    (8) ifSt -> RIF exp . LLAIZQ gotoSt LLADER
    (12) exp -> exp . MAS exp
    (13) exp -> exp . MENOS exp
    (14) exp -> exp . MULTIPLICACION exp
    (15) exp -> exp . DIVISION exp
    (18) exp -> exp . IGUALIGUAL exp
    (19) exp -> exp . DISTINTO exp
    (20) exp -> exp . MAYOR exp
    (21) exp -> exp . MENOR exp
    (22) exp -> exp . MAYORIGUAL exp
    (23) exp -> exp . MENORIGUAL exp

    LLAIZQ          shift and go to state 23
    MAS             shift and go to state 24
    MENOS           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    IGUALIGUAL      shift and go to state 28
    DISTINTO        shift and go to state 29
    MAYOR           shift and go to state 30
    MENOR           shift and go to state 31
    MAYORIGUAL      shift and go to state 32
    MENORIGUAL      shift and go to state 33


state 16

    (17) exp -> MENOS . exp
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 34

state 17

    (16) exp -> RMATH . PUNTO RMOD PARIZQ exp COMA exp PARDER

    PUNTO           shift and go to state 35


state 18

    (24) exp -> ID .

    LLAIZQ          reduce using rule 24 (exp -> ID .)
    MAS             reduce using rule 24 (exp -> ID .)
    MENOS           reduce using rule 24 (exp -> ID .)
    MULTIPLICACION  reduce using rule 24 (exp -> ID .)
    DIVISION        reduce using rule 24 (exp -> ID .)
    IGUALIGUAL      reduce using rule 24 (exp -> ID .)
    DISTINTO        reduce using rule 24 (exp -> ID .)
    MAYOR           reduce using rule 24 (exp -> ID .)
    MENOR           reduce using rule 24 (exp -> ID .)
    MAYORIGUAL      reduce using rule 24 (exp -> ID .)
    MENORIGUAL      reduce using rule 24 (exp -> ID .)
    PTCOMA          reduce using rule 24 (exp -> ID .)
    COMA            reduce using rule 24 (exp -> ID .)
    PARDER          reduce using rule 24 (exp -> ID .)


state 19

    (25) exp -> ENTERO .

    LLAIZQ          reduce using rule 25 (exp -> ENTERO .)
    MAS             reduce using rule 25 (exp -> ENTERO .)
    MENOS           reduce using rule 25 (exp -> ENTERO .)
    MULTIPLICACION  reduce using rule 25 (exp -> ENTERO .)
    DIVISION        reduce using rule 25 (exp -> ENTERO .)
    IGUALIGUAL      reduce using rule 25 (exp -> ENTERO .)
    DISTINTO        reduce using rule 25 (exp -> ENTERO .)
    MAYOR           reduce using rule 25 (exp -> ENTERO .)
    MENOR           reduce using rule 25 (exp -> ENTERO .)
    MAYORIGUAL      reduce using rule 25 (exp -> ENTERO .)
    MENORIGUAL      reduce using rule 25 (exp -> ENTERO .)
    PTCOMA          reduce using rule 25 (exp -> ENTERO .)
    COMA            reduce using rule 25 (exp -> ENTERO .)
    PARDER          reduce using rule 25 (exp -> ENTERO .)


state 20

    (26) exp -> DECIMAL .

    LLAIZQ          reduce using rule 26 (exp -> DECIMAL .)
    MAS             reduce using rule 26 (exp -> DECIMAL .)
    MENOS           reduce using rule 26 (exp -> DECIMAL .)
    MULTIPLICACION  reduce using rule 26 (exp -> DECIMAL .)
    DIVISION        reduce using rule 26 (exp -> DECIMAL .)
    IGUALIGUAL      reduce using rule 26 (exp -> DECIMAL .)
    DISTINTO        reduce using rule 26 (exp -> DECIMAL .)
    MAYOR           reduce using rule 26 (exp -> DECIMAL .)
    MENOR           reduce using rule 26 (exp -> DECIMAL .)
    MAYORIGUAL      reduce using rule 26 (exp -> DECIMAL .)
    MENORIGUAL      reduce using rule 26 (exp -> DECIMAL .)
    PTCOMA          reduce using rule 26 (exp -> DECIMAL .)
    COMA            reduce using rule 26 (exp -> DECIMAL .)
    PARDER          reduce using rule 26 (exp -> DECIMAL .)


state 21

    (9) assignment -> ID IGUAL exp . PTCOMA
    (12) exp -> exp . MAS exp
    (13) exp -> exp . MENOS exp
    (14) exp -> exp . MULTIPLICACION exp
    (15) exp -> exp . DIVISION exp
    (18) exp -> exp . IGUALIGUAL exp
    (19) exp -> exp . DISTINTO exp
    (20) exp -> exp . MAYOR exp
    (21) exp -> exp . MENOR exp
    (22) exp -> exp . MAYORIGUAL exp
    (23) exp -> exp . MENORIGUAL exp

    PTCOMA          shift and go to state 36
    MAS             shift and go to state 24
    MENOS           shift and go to state 25
    MULTIPLICACION  shift and go to state 26
    DIVISION        shift and go to state 27
    IGUALIGUAL      shift and go to state 28
    DISTINTO        shift and go to state 29
    MAYOR           shift and go to state 30
    MENOR           shift and go to state 31
    MAYORIGUAL      shift and go to state 32
    MENORIGUAL      shift and go to state 33


state 22

    (10) gotoSt -> RGOTO ID PTCOMA .

    ID              reduce using rule 10 (gotoSt -> RGOTO ID PTCOMA .)
    RGOTO           reduce using rule 10 (gotoSt -> RGOTO ID PTCOMA .)
    RIF             reduce using rule 10 (gotoSt -> RGOTO ID PTCOMA .)
    $end            reduce using rule 10 (gotoSt -> RGOTO ID PTCOMA .)
    LLADER          reduce using rule 10 (gotoSt -> RGOTO ID PTCOMA .)


state 23

    (8) ifSt -> RIF exp LLAIZQ . gotoSt LLADER
    (10) gotoSt -> . RGOTO ID PTCOMA

    RGOTO           shift and go to state 9

    gotoSt                         shift and go to state 37

state 24

    (12) exp -> exp MAS . exp
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 38

state 25

    (13) exp -> exp MENOS . exp
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 39

state 26

    (14) exp -> exp MULTIPLICACION . exp
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 40

state 27

    (15) exp -> exp DIVISION . exp
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 41

state 28

    (18) exp -> exp IGUALIGUAL . exp
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20

    exp                            shift and go to state 42

state 29

    (19) exp -> exp DISTINTO . exp
    (12) exp -> . exp MAS exp
    (13) exp -> . exp MENOS exp
    (14) exp -> . exp MULTIPLICACION exp
    (15) exp -> . exp DIVISION exp
    (16) exp -> . RMATH PUNTO RMOD PARIZQ exp COMA exp PARDER
    (17) exp -> . MENOS exp
    (18) exp -> . exp IGUALIGUAL exp
    (19) exp -> . exp DISTINTO exp
    (20) exp -> . exp MAYOR exp
    (21) exp -> . exp MENOR exp
    (22) exp -> . exp MAYORIGUAL exp
    (23) exp -> . exp MENORIGUAL exp
    (24) exp -> . ID
    (25) exp -> . ENTERO
    (26) exp -> . DECIMAL

    RMATH           shift and go to state 17
    MENOS           shift and go to state 16
    ID              shift and go to state 18
    ENTERO          shift and go to state 19
    DECIMAL         shift and go to state 20
